--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,5 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -24,10 +26,7 @@
     <meta name="revisit-after" content=" days" />
     <meta name="author" content="KARTHIK LAL" />
     <meta name="copyright" content="KARTHIK LAL" />
-    <meta
-      property="og:title"
-      content="KARTHIK LAL - Certified Ethical Hacker"
-    />
+    <meta property="og:title" content="MIFTAKHUL_HUDA | PORTFOLIO" />
     <meta
       property="og:description"
       content="I am Karthik Lal, a 24-year-old cybersecurity researcher based in Kerala, India. I am enthusiastic about web development, graphic design, and cybersecurity, and continuously strive to improve my skills in these areas.!"
@@ -83,12 +82,12 @@
     <!-- Favicon -->
     <link
       rel="shortcut icon"
-      href="assets/img/favicon/favicon.ico"
+      href="assets/img/favicon/signature.png"
       type="image/x-icon"
     />
     <link
       rel="icon"
-      href="assets/img/favicon/favicon.ico"
+      href="assets/img/favicon/signature.png"
       type="image/x-icon"
     />
 
@@ -130,11 +129,13 @@
         <div class="ptr-overlay"></div>
         <div class="ptr-preloader">
           <div class="ptr-prel-content">
-            <img
-              src="assets/img/logo-light.png"
-              class="ptr-prel-image tt-logo-light"
-              alt="Logo"
-            />
+            <a href="index.html">
+              <img
+                src="assets/img/signature-ligth.png"
+                class="ptr-prel-image tt-logo-light"
+                alt="Logo"
+              />
+            </a>
           </div>
         </div>
       </div>
@@ -147,14 +148,14 @@
           <div class="tt-header-inner">
             <div class="tt-header-col">
               <div class="tt-logo">
-                <a href="index">
+                <a href="index.html">
                   <img
-                    src="assets/img/logo-light.png"
+                    src="assets/img/signature-ligth.png"
                     class="tt-logo-light magnetic-item"
                     alt="Logo"
                   />
                   <img
-                    src="assets/img/logo-dark.png"
+                    src="assets/img/signature-dark.png"
                     class="tt-logo-dark magnetic-item"
                     alt="Logo"
                   />
@@ -180,7 +181,7 @@
                   <div class="tt-ol-menu-inner tt-wrap">
                     <div class="tt-ol-menu-content">
                       <ul class="tt-ol-menu-list">
-                        <li><a href="index">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="index.html#about">About</a></li>
                         <li><a href="index.html#portfolio">Portfolio</a></li>
                         <li><a href="index.html#service">Service</a></li>
@@ -197,7 +198,7 @@
                         </li>
                         <li>
                           <a
-                            href="https://www.facebook.com/karthiklal0"
+                            href="https://www.facebook.com/profile.php?id=100063111886787&mibextid=ZbWKwL"
                             target="_blank"
                             rel="noopener"
                             >Facebook</a
@@ -205,23 +206,7 @@
                         </li>
                         <li>
                           <a
-                            href="https://behance.net/karthik558"
-                            target="_blank"
-                            rel="noopener"
-                            >Behance</a
-                          >
-                        </li>
-                        <li>
-                          <a
-                            href="https://www.linkedin.com/in/karthiklal"
-                            target="_blank"
-                            rel="noopener"
-                            >Linkedin</a
-                          >
-                        </li>
-                        <li>
-                          <a
-                            href="https://github.com/karthik558"
+                            href="https://github.com/Miftakhul098"
                             target="_blank"
                             rel="noopener"
                             >Github</a
@@ -229,7 +214,7 @@
                         </li>
                         <li>
                           <a
-                            href="https://www.instagram.com/_karthiklal"
+                            href="https://www.instagram.com/miftakhul.0220?igsh=ZTVuMG1rdGpqb3B3"
                             target="_blank"
                             rel="noopener"
                             >Instagram</a
@@ -288,15 +273,14 @@
                         <span class="tt-ci-icon"
                           ><i class="fas fa-map-marker-alt"></i
                         ></span>
-                        India, Kerala, Alappuzha, <br />
-                        Haripad 690514
+                        Tonolayu,Ngagrong,Gladagsari,Boyolali<br />
                       </li>
                       <li>
                         <span class="tt-ci-icon"
                           ><i class="fas fa-envelope"></i
                         ></span>
                         <a href="mailto:contact@karthiklal.in" class="tt-link"
-                          >contact@karthiklal.in</a
+                          >miftakhulhuda3543@gmail.com</a
                         >
                       </li>
                       <li>
@@ -305,7 +289,7 @@
                           <ul>
                             <li>
                               <a
-                                href="https://www.facebook.com/karthiklal0"
+                                href="https://www.facebook.com/profile.php?id=100063111886787&mibextid=ZbWKwL"
                                 class="magnetic-item"
                                 target="_blank"
                                 rel="noopener"
@@ -314,25 +298,7 @@
                             </li>
                             <li>
                               <a
-                                href="https://behance.net/karthik558"
-                                class="magnetic-item"
-                                target="_blank"
-                                rel="noopener"
-                                ><i class="fab fa-behance"></i
-                              ></a>
-                            </li>
-                            <li>
-                              <a
-                                href="https://www.linkedin.com/in/karthiklal"
-                                class="magnetic-item"
-                                target="_blank"
-                                rel="noopener"
-                                ><i class="fab fa-linkedin"></i
-                              ></a>
-                            </li>
-                            <li>
-                              <a
-                                href="https://github.com/karthik558"
+                                href="https://github.com/Miftakhul098"
                                 class="magnetic-item"
                                 target="_blank"
                                 rel="noopener"
@@ -341,7 +307,7 @@
                             </li>
                             <li>
                               <a
-                                href="https://www.instagram.com/_karthiklal"
+                                href="https://www.instagram.com/miftakhul.0220?igsh=ZTVuMG1rdGpqb3B3"
                                 class="magnetic-item"
                                 target="_blank"
                                 rel="noopener"
@@ -365,7 +331,7 @@
                         <div class="tt-col-md-6">
                           <div class="tt-form-group">
                             <label for="name"
-                              >Your Name <span class="required">*</span></label
+                              >Name <span class="required">*</span></label
                             >
                             <input
                               class="tt-form-control"
@@ -380,8 +346,7 @@
                         <div class="tt-col-md-6">
                           <div class="tt-form-group">
                             <label for="email"
-                              >Email address
-                              <span class="required">*</span></label
+                              >Email <span class="required">*</span></label
                             >
                             <input
                               class="tt-form-control"
@@ -409,7 +374,7 @@
                       </div>
                       <div class="tt-form-group">
                         <label for="message"
-                          >Your Message <span class="required">*</span></label
+                          >Masukkan Pesan <span class="required">*</span></label
                         >
                         <textarea
                           class="tt-form-control"
@@ -422,14 +387,14 @@
                       </div>
                       <small class="tt-form-text"
                         ><em
-                          >Fields marked with an asterisk (*) are required!</em
+                          >Kolom yang bertanda asterisk (*) wajib diisi!</em
                         ></small
                       >
                       <button
                         type="submit"
                         class="tt-btn tt-btn-primary margin-top-30"
                       >
-                        <div data-hover="Send Message">Send Message</div>
+                        <div data-hover="Send Message">Kirim Pesan</div>
                         <span class="tt-btn-icon"
                           ><i class="fas fa-paper-plane"></i
                         ></span>
@@ -464,10 +429,8 @@
                       <span class="tt-btn-icon"
                         ><i class="far fa-copyright"></i
                       ></span>
-                      <div
-                        data-hover="2024. Designed & Developed by KARTHIK LAL"
-                      >
-                        2024. Designed & Developed by KARTHIK LAL
+                      <div data-hover="2024. by MIFTAKHUL_HUDA">
+                        2024. by MIFTAKHUL_HUDA
                       </div>
                     </a>
                   </div>
@@ -483,7 +446,7 @@
                       <ul>
                         <li>
                           <a
-                            href="https://www.facebook.com/karthiklal0"
+                            href="https://www.facebook.com/profile.php?id=100063111886787&mibextid=ZbWKwL"
                             class="magnetic-item"
                             target="_blank"
                             rel="noopener"
@@ -492,25 +455,7 @@
                         </li>
                         <li>
                           <a
-                            href="https://behance.net/karthik558"
-                            class="magnetic-item"
-                            target="_blank"
-                            rel="noopener"
-                            ><i class="fab fa-behance"></i
-                          ></a>
-                        </li>
-                        <li>
-                          <a
-                            href="https://www.linkedin.com/in/karthiklal"
-                            class="magnetic-item"
-                            target="_blank"
-                            rel="noopener"
-                            ><i class="fab fa-linkedin"></i
-                          ></a>
-                        </li>
-                        <li>
-                          <a
-                            href="https://github.com/karthik558"
+                            href="https://github.com/Miftakhul098"
                             class="magnetic-item"
                             target="_blank"
                             rel="noopener"
@@ -519,7 +464,7 @@
                         </li>
                         <li>
                           <a
-                            href="https://www.instagram.com/_karthiklal"
+                            href="https://www.instagram.com/miftakhul.0220?igsh=ZTVuMG1rdGpqb3B3"
                             class="magnetic-item"
                             target="_blank"
                             rel="noopener"
