--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,10 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Title -->
-    <title>KARTHIK LAL - Certified Ethical Hacker</title>
+    <title>MIFTAKHUL_HUDA | PORTFOLIO</title>
 
     <!-- Meta Tags -->
     <meta charset="UTF-8" />
@@ -83,12 +85,12 @@
     <!-- Favicon -->
     <link
       rel="shortcut icon"
-      href="assets/img/favicon/favicon.ico"
+      href="assets/img/favicon/signature.png"
       type="image/x-icon"
     />
     <link
       rel="icon"
-      href="assets/img/favicon/favicon.ico"
+      href="assets/img/favicon/signature.png"
       type="image/x-icon"
     />
 
@@ -132,7 +134,7 @@
         <div class="ptr-preloader">
           <div class="ptr-prel-content">
             <img
-              src="assets/img/logo-light.png"
+              src="assets/img/signature-ligth.png"
               class="ptr-prel-image tt-logo-light"
               alt="Logo"
             />
@@ -148,14 +150,14 @@
           <div class="tt-header-inner">
             <div class="tt-header-col">
               <div class="tt-logo">
-                <a href="index">
+                <a href="index.html">
                   <img
-                    src="assets/img/logo-light.png"
+                    src="assets/img/signature-ligth.png"
                     class="tt-logo-light magnetic-item"
                     alt="Logo"
                   />
                   <img
-                    src="assets/img/logo-dark.png"
+                    src="assets/img/signature-dark.png"
                     class="tt-logo-dark magnetic-item"
                     alt="Logo"
                   />
@@ -181,7 +183,7 @@
                   <div class="tt-ol-menu-inner tt-wrap">
                     <div class="tt-ol-menu-content">
                       <ul class="tt-ol-menu-list">
-                        <li><a href="index">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="index.html#about">About</a></li>
                         <li><a href="index.html#portfolio">Portfolio</a></li>
                         <li><a href="index.html#service">Service</a></li>
@@ -193,7 +195,7 @@
                       <ul class="tt-ol-menu-social">
                         <li>
                           <a
-                            href="https://www.facebook.com/karthiklal0"
+                            href="https://www.facebook.com/profile.php?id=100063111886787&mibextid=ZbWKwL"
                             target="_blank"
                             rel="noopener"
                             >Facebook</a
@@ -201,23 +203,7 @@
                         </li>
                         <li>
                           <a
-                            href="https://behance.net/karthik558"
-                            target="_blank"
-                            rel="noopener"
-                            >Behance</a
-                          >
-                        </li>
-                        <li>
-                          <a
-                            href="https://www.linkedin.com/in/karthiklal"
-                            target="_blank"
-                            rel="noopener"
-                            >Linkedin</a
-                          >
-                        </li>
-                        <li>
-                          <a
-                            href="https://github.com/karthik558"
+                            href="https://github.com/Miftakhul098"
                             target="_blank"
                             rel="noopener"
                             >Github</a
@@ -225,7 +211,7 @@
                         </li>
                         <li>
                           <a
-                            href="https://www.instagram.com/_karthiklal"
+                            href="https://www.instagram.com/miftakhul.0220?igsh=ZTVuMG1rdGpqb3B3"
                             target="_blank"
                             rel="noopener"
                             >Instagram</a
@@ -247,13 +233,13 @@
             <div class="page-header-inner tt-wrap">
               <div class="ph-caption">
                 <div class="ph-caption-subtitle">
-                  <div class="ph-appear">Selected Works</div>
+                  <div class="ph-appear">Dokumen Pilihan</div>
                 </div>
                 <h1 class="ph-caption-title">
-                  <div class="ph-appear">Portfolio</div>
+                  <div class="ph-appear">Document</div>
                 </h1>
                 <div class="ph-caption-title-ghost">
-                  <div class="ph-appear">Portfolio</div>
+                  <div class="ph-appear">Document</div>
                 </div>
               </div>
             </div>
@@ -367,7 +353,7 @@
                         <div class="ttgr-item-inner">
                           <div class="portfolio-grid-item">
                             <a
-                              href="https://namashivalaya.org"
+                              href="assets/img/portfolio/lulus.jpg"
                               class="pgi-image-wrap"
                               data-cursor="View<br>Project"
                             >
@@ -375,7 +361,7 @@
                                 <div class="pgi-image-inner anim-zoomin">
                                   <figure class="pgi-image ttgr-height">
                                     <img
-                                      src="assets/img/portfolio/namashivalaya_web.png"
+                                      src="assets/img/portfolio/lulus.jpg"
                                       alt="image"
                                     />
                                   </figure>
@@ -399,7 +385,7 @@
                         <div class="ttgr-item-inner">
                           <div class="portfolio-grid-item">
                             <a
-                              href="https://www.behance.net/gallery/174168173/Olam-Design"
+                              href="assets/img/portfolio/penilaian.jpg"
                               class="pgi-image-wrap"
                               data-cursor="View<br>Project"
                             >
@@ -407,7 +393,7 @@
                                 <div class="pgi-image-inner anim-zoomin">
                                   <figure class="pgi-image ttgr-height">
                                     <img
-                                      src="assets/img/portfolio/olam_design.png"
+                                      src="assets/img/portfolio/penilaian.jpg"
                                       alt="image"
                                     />
                                   </figure>
@@ -431,7 +417,7 @@
                         <div class="ttgr-item-inner">
                           <div class="portfolio-grid-item">
                             <a
-                              href="https://ryzen-kernel.vercel.app"
+                              href="assets/img/portfolio/sertivikat2.jpg"
                               class="pgi-image-wrap"
                               data-cursor="View<br>Project"
                             >
@@ -439,7 +425,7 @@
                                 <div class="pgi-image-inner anim-zoomin">
                                   <figure class="pgi-image ttgr-height">
                                     <img
-                                      src="assets/img/portfolio/ryzenkernel_web.png"
+                                      src="assets/img/portfolio/sertivikat2.jpg"
                                       alt="image"
                                     />
                                   </figure>
@@ -464,7 +450,7 @@
                         <div class="ttgr-item-inner">
                           <div class="portfolio-grid-item">
                             <a
-                              href="#"
+                              href="assets/img/portfolio/kk.jpg"
                               class="pgi-image-wrap"
                               data-cursor="View<br>Project"
                             >
@@ -472,7 +458,7 @@
                                 <div class="pgi-image-inner anim-zoomin">
                                   <figure class="pgi-image ttgr-height">
                                     <img
-                                      src="assets/img/portfolio/gustcomment_web.png"
+                                      src="assets/img/portfolio/kk.jpg"
                                       alt="image"
                                     />
                                   </figure>
@@ -856,14 +842,14 @@
             <div class="tt-section-inner tt-wrap">
               <div class="tt-page-nav tt-pn-stroke">
                 <a
-                  href="contact"
+                  href="contact.html"
                   class="tt-pn-link anim-fadeinup"
                   data-cursor="<i class='fas fa-envelope'></i>"
                 >
                   <div class="tt-pn-title" id="contact">Let's talk</div>
                   <div class="tt-pn-hover-title">Let's talk</div>
                 </a>
-                <div class="tt-pn-subtitle anim-fadeinup">Get in Touch</div>
+                <div class="tt-pn-subtitle anim-fadeinup">Hubungi Kami</div>
               </div>
             </div>
           </div>
@@ -892,8 +878,8 @@
                     <span class="tt-btn-icon"
                       ><i class="far fa-copyright"></i
                     ></span>
-                    <div data-hover="2024. Designed & Developed by KARTHIK LAL">
-                      2024. Designed & Developed by KARTHIK LAL
+                    <div data-hover="2024. by MIFTAKHUL_HUDA">
+                      2024. by MIFTAKHUL_HUDA
                     </div>
                   </a>
                 </div>
@@ -909,7 +895,7 @@
                     <ul>
                       <li>
                         <a
-                          href="https://www.facebook.com/karthiklal0"
+                          href="https://www.facebook.com/profile.php?id=100063111886787&mibextid=ZbWKwL"
                           class="magnetic-item"
                           target="_blank"
                           rel="noopener"
@@ -918,25 +904,7 @@
                       </li>
                       <li>
                         <a
-                          href="https://behance.net/karthik558"
-                          class="magnetic-item"
-                          target="_blank"
-                          rel="noopener"
-                          ><i class="fab fa-behance"></i
-                        ></a>
-                      </li>
-                      <li>
-                        <a
-                          href="https://www.linkedin.com/in/karthiklal"
-                          class="magnetic-item"
-                          target="_blank"
-                          rel="noopener"
-                          ><i class="fab fa-linkedin"></i
-                        ></a>
-                      </li>
-                      <li>
-                        <a
-                          href="https://github.com/karthik558"
+                          href="https://github.com/Miftakhul098"
                           class="magnetic-item"
                           target="_blank"
                           rel="noopener"
@@ -945,7 +913,7 @@
                       </li>
                       <li>
                         <a
-                          href="https://www.instagram.com/_karthiklal"
+                          href="https://www.instagram.com/miftakhul.0220?igsh=ZTVuMG1rdGpqb3B3"
                           class="magnetic-item"
                           target="_blank"
                           rel="noopener"
