--- a/404.html
+++ b/404.html
@@ -1,8 +1,10 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Title -->
-    <title>KARTHIK LAL - 404!</title>
+    <title>MIFTAKHUL_Huda - 404!</title>
 
     <!-- Meta Tags -->
     <meta charset="UTF-8" />
@@ -180,7 +182,7 @@
                   <div class="tt-ol-menu-inner tt-wrap">
                     <div class="tt-ol-menu-content">
                       <ul class="tt-ol-menu-list">
-                        <li><a href="index">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="index.html#about">About</a></li>
                         <li><a href="index.html#portfolio">Portfolio</a></li>
                         <li><a href="index.html#service">Service</a></li>
@@ -287,10 +289,8 @@
                       <span class="tt-btn-icon"
                         ><i class="far fa-copyright"></i
                       ></span>
-                      <div
-                        data-hover="2024. Designed & Developed by KARTHIK LAL"
-                      >
-                        2024. Designed & Developed by KARTHIK LAL
+                      <div data-hover="2024. by MIFTAKHUL HUDA">
+                        2024. by MIFTAKHUL HUDA
                       </div>
                     </a>
                   </div>
